[package]
name = "arch"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11"

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11"
x86_64 = "0.15.4"
percpu = "0.3"