[package]
name = "basic"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
arch = { path = "../arch" }
ksync = { path = "../ksync" }
domain_main = { path = "../domain_main" }
corelib = { path = "../corelib", features = ["core_impl"] }
task_meta = { path = "../task_meta" }
shared_heap = { path = "../shared_heap" }
io = { path = "../io" }

pod = { git = "https://github.com/asterinas/pod", rev = "d7dba56" }
memory_addr = { path = "../../utils/memory_addr" }
int-enum = "1"
riscv = "0.11"
log = { version = "0", optional = true }
pconst = { path = "../../utils/pconst", features = [
    "special_error",
] }
spin = "0"
unwinding = { version = "0.2.8", default-features = false, features = [
    "unwinder",
    "fde-gnu-eh-frame-hdr",
    "panic",
    "personality",
] }
getrandom = "0.3.1"

[features]
default = ["log"]
log = ["dep:log"]
task = []
