[package]
name = "config"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(plat_vf2)',
	'cfg(plat_qemu_riscv)',
	'cfg(plat_qemu_x86_64)',
] }