[package]
name = "ksync"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
core_cpu_id = ["dep:corelib"]

[dependencies]
config = { path = "../config" }
arch = { path = "../arch" }
corelib = { path = "../corelib", optional = true }
kernel-sync = { path = "../../utils/kernel-sync" }
spin = "0"
