[package]
name = "ksync"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
config = { path = "../config" }
arch = { path = "../arch" }
corelib = { path = "../corelib", features = ["core_impl"] }
kernel-sync = { path = "../../utils/kernel-sync" }
spin = "0"
